--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PASSWORD=1wF6szAm0TYsT7bP
 DB_NAME=JuriTechCluster
 CLUSTER_URL=juritechcluster.ux9c99s.mongodb.net
 DB_URI=mongodb+srv://elbarraconbr:1wF6szAm0TYsT7bP@juritechcluster.ux9c99s.mongodb.net/
+JWT_SECRET=minhaChaveSecreta
