--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "echo \"No tests specified\" && exit 0"
   }
 }
