--- a/.github/workflows/juritech-ci-bckend.js.yml
+++ b/.github/workflows/juritech-ci-bckend.js.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15 # Example: limit the job to x minutes
+    #timeout-minutes: 15 # Example: limit the job to x minutes
 
     strategy:
       matrix:
