--- a/.github/workflows/juritech-ci-bckend.js.yml
+++ b/.github/workflows/juritech-ci-bckend.js.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x] # Supported Node.js versions
+        node-version: [16.x, 18.x] # Supported Node.js versions
 
     steps:
     - uses: actions/checkout@v3 # Checks-out your repository
